--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.9.0",
   "private": true,
   "scripts": {
-    "start": "react-native start",
-    "android": "react-native run-android",
+    "translation": "ts-node translation.ts",
+    "android": "npm run translation && concurrently --handle-input  \"react-native start\" \"react-native run-android\"",
     "ios": "react-native run-ios"
   },
   "dependencies": {
@@ -21,6 +21,7 @@
     "i18next": "^21.8.11",
     "i18next-http-backend": "^1.4.1",
     "i18next-multiload-backend-adapter": "^1.0.0",
+    "i18next-resources-to-backend": "^1.0.0",
     "react": "18.0.0",
     "react-i18next": "^11.17.4",
     "react-native": "0.69.1",
@@ -50,12 +51,15 @@
     "@types/react-native": "^0.69.1",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
-    "@typescript-eslint/parser": "^5.29.0",
+    "@typescript-eslint/parser": "^5.30.4",
     "babel-jest": "^26.6.3",
+    "concurrently": "^7.2.2",
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.70.3",
-    "react-test-renderer": "18.0.0"
+    "react-test-renderer": "18.0.0",
+    "ts-node": "^10.8.2",
+    "typescript": "^4.7.4"
   },
   "resolutions": {
     "@types/react": "^18"
