--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@gorhom/bottom-sheet": "^4.3.2",
     "@react-native-async-storage/async-storage": "^1.17.7",
     "@react-native-community/datetimepicker": "^6.2.0",
+    "@react-native-community/netinfo": "^9.3.0",
     "@react-native-community/slider": "^4.2.4",
     "@react-native-picker/picker": "^2.4.2",
     "@react-navigation/bottom-tabs": "^6.3.1",
@@ -36,6 +37,7 @@
     "react-native-tab-view": "^3.1.1",
     "react-native-track-player": "^2.2.0-rc4",
     "react-native-vector-icons": "^9.2.0",
+    "react-query": "^3.39.1",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0"
