--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "scripts": {
     "translation": "ts-node translation.ts",
-    "android": "npm run translation && concurrently --handle-input  \"react-native start\" \"react-native run-android\"",
-    "ios": "react-native run-ios"
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "start": "react-native start"
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.3.2",
@@ -33,7 +34,7 @@
     "react-native-pager-view": "^5.4.24",
     "react-native-reanimated": "^2.9.1",
     "react-native-safe-area-context": "^4.3.1",
-    "react-native-screens": "^3.14.0",
+    "react-native-screens": "^3.15.0",
     "react-native-tab-view": "^3.1.1",
     "react-native-track-player": "^2.2.0-rc4",
     "react-native-vector-icons": "^9.2.0",
@@ -55,7 +56,6 @@
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.30.4",
     "babel-jest": "^26.6.3",
-    "concurrently": "^7.2.2",
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.70.3",
